# quant-trading-system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  README.md  SECURITY.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
backend/: alembic.ini  main.py
backend/alembic/: env.py
backend/tests/: test_predictor.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  EXTENDING.md  MAINTENANCE_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STRUCTURE.md  TESTING_GUIDE.md  backtest-result-contract.md  openapi.json  postman_collection.json
docs/architecture/: frontend-component-split-playbook.md  industry-layering.md
docs/releases/: v4.0.0.md  v5.0.0.md
docs/thesis_assets/: frozen_heatmap_snapshot.json  frozen_leader_case.json
frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.setup.js
frontend/src/: App.js  index.css  index.js
logs/: alerts.json
scripts/: build_comm_appendices.py  check_backend_quality.sh  cleanup.sh  finalize_shu_thesis_docx.py  generate_api_docs.py  health_check.py  run_tests.py  start_backend.py  start_celery_worker.sh  start_system.sh  stop_system.sh
src/: __init__.py
src/analytics/: asset_pricing.py  asset_pricing_support.py  dashboard.py  fundamental_analyzer.py  industry_analyzer.py  industry_stock_details.py  leader_stock_scorer.py  lstm_predictor.py  model_comparator.py  pattern_recognizer.py  portfolio_optimizer.py  predictor.py  pricing_gap_analyzer.py  sentiment_analyzer.py  technical_indicators.py  trend_analyzer.py  valuation_model.py  volume_price_analyzer.py
src/backtest/: __init__.py  backtester.py  batch_backtester.py  cross_market_backtester.py  execution_engine.py  history.py  industry_backtest.py  metrics.py  portfolio_backtester.py  position_sizer.py
src/core/: events.py
src/data/: crypto_provider.py  data_manager.py  derivatives.py  news_fetcher.py  realtime_manager.py  sentiment_signals.py
src/middleware/: rate_limiter.py
src/reporting/: __init__.py  data_exporter.py  pdf_generator.py
src/research/: workbench.py
src/security/: validation.py
src/settings/: base.py
src/strategy/: advanced_technical.py  lstm_strategy.py  ml_strategies.py  pairs_trading.py  sentiment_strategy.py  strategies.py  strategy_validator.py
src/trading/: __init__.py
src/utils/: async_utils.py  cache_optimizer.py  config.py  data_validation.py  validators.py
tests/: conftest.py  test_ai_prediction.py  test_model_comparator.py
tests/e2e/: consoleNoise.js  package-lock.json  package.json  snapshot_layouts.js  verify_backtest_workflow.js  verify_industry_features.js  verify_new_features.js  verify_pricing_research.js  verify_realtime_features.js  verify_result.html  verify_today_research.js
tests/integration/: test_api.py  test_backtest_perf.py  test_backtest_pipeline.py  test_provider_failover.py  test_realtime_contracts.py  test_research_journal_contracts.py  test_strategy_comparison.py
tests/manual/: check_ak.py  debug_yfinance.py  reproduce_backtest.py  test_analysis_e2e.py  test_frontend_logic.py  test_index_data.py  test_industry_details.py  test_sina_mapping.py  test_system.py  test_turnover.py  verify_final_fixes.py  verify_optimization.py
tests/unit/: test_akshare_provider.py  test_alt_data_endpoint.py  test_alt_data_pipeline.py  test_analysis.py  test_asset_pricing.py  test_backend_main.py  test_backtest_history.py  test_backtester.py  test_batch_backtester.py  test_cache_optimizer.py  test_circuit_breaker.py  test_cross_market_backtester.py  test_cross_market_endpoint.py  test_data_manager.py  test_industry_analyzer.py  test_industry_analyzer_fast_path.py  test_industry_backtester.py  test_industry_helpers.py  test_industry_leader_endpoint.py  test_industry_stock_details.py  test_macro_factors.py  test_metrics.py  test_paper_trading.py  test_policy_radar_endpoint.py  test_pricing_endpoint.py  test_realtime_alerts.py  test_realtime_journal.py  test_realtime_manager.py  test_realtime_preferences.py  test_research_journal.py  test_research_workbench.py  test_research_workbench_endpoint.py  test_run_tests_script.py  test_runtime_state.py  (+7 more)
(+366 files in other folders)
